tests/NormalTests/paczka1/fuzzy1/56718032.err
Error in line 4: fHAWP8Z2 S433 12,11
Error in line 7: fHAWP8Z2 S433 46,8
Error in line 15: ACkPeT3v A241 87,2
